--- a/README.Rmd
+++ b/README.Rmd
@@ -54,9 +54,9 @@ An API key is required to access data from TCIA. To obtain and correctly store y
 
 4. Restart R. `.Renviron` is only processed at the beginning of an R session.
 
-## Vignettes
+## Package usage
 
-???
+Detailed vignettes on package usage and downstream image analysis can be viewed on [CRAN](https://CRAN.R-project.org/package=TCIApathfinder) or from within an R session with `browseVignettes("TCIApathfinder")`.
 
 ## More information on the TCIA REST API
 
