--- a/vignettes/introduction.Rmd
+++ b/vignettes/introduction.Rmd
@@ -9,6 +9,14 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
+```{r echo = F, message = F}
+api_key <- Sys.getenv("TCIA_API_KEY")
+if(identical(api_key, "")) {
+  knitr::opts_chunk$set(eval = FALSE)
+  message("Note: code examples will not be evaluated because the system does not have a valid API key installed.")
+}
+```
+
 # Installation
 
 From within R:
