--- a/README.Rmd
+++ b/README.Rmd
@@ -58,6 +58,10 @@ An API key is required to access data from TCIA. To obtain and correctly store y
 
 Detailed vignettes on package usage and downstream image analysis can be viewed on [CRAN](https://CRAN.R-project.org/package=TCIApathfinder) or from within an R session with `browseVignettes("TCIApathfinder")`.
 
+## Citation
+
+TBA. Check out our [biorXiv preprint](https://www.biorxiv.org/content/early/2017/12/30/240986).
+
 ## More information on the TCIA REST API
 
 - [API usage guide](https://wiki.cancerimagingarchive.net/display/Public/TCIA+Programmatic+Interface+%28REST+API%29+Usage+Guide)
