--- a/vignettes/introduction.Rmd
+++ b/vignettes/introduction.Rmd
@@ -9,9 +9,9 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-```{r echo = F, message = F}
+```{r echo = FALSE, message = FALSE}
 api_key <- Sys.getenv("TCIA_API_KEY")
-if(identical(api_key, "")) {
+if (identical(api_key, "")) {
   knitr::opts_chunk$set(eval = FALSE)
   message("Note: code examples will not be evaluated because the system does not have a valid API key installed.")
 }
@@ -21,13 +21,13 @@ if(identical(api_key, "")) {
 
 From within R:
 
-```{r eval = F}
+```{r eval = FALSE}
 install.packages("TCIApathfinder")
 ```
 
 From GitHub:
 
-```{r eval = F}
+```{r eval = FALSE}
 # install.packages("devtools")
 devtools::install_github("pamelarussell/TCIApathfinder")
 ```
@@ -142,8 +142,7 @@ head(sop_uids$sop_instance_uids)
 
 ```{r}
 im <- save_single_image(series_instance_uid = "1.3.6.1.4.1.14519.5.2.1.3344.4002.298037359751562809791703106256",
-                  sop_instance_uid = "1.3.6.1.4.1.14519.5.2.1.3344.4002.113224119964450170072494597907",
-                  out_dir = "~/Desktop")
+                  sop_instance_uid = "1.3.6.1.4.1.14519.5.2.1.3344.4002.113224119964450170072494597907")
 im$out_file
 ```
 
@@ -153,7 +152,7 @@ Note: a file name can be provided to override the original file name.
 
 ```{r}
 ser <- save_image_series(series_instance_uid = "1.3.6.1.4.1.14519.5.2.1.3344.4002.298037359751562809791703106256",
-                         out_dir = "~/Desktop", out_file_name = "series.zip")
+                         out_file_name = "series.zip")
 ser$out_file
 ```
 
